# vulkan_research_kit

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu-ci-vulkan-from-package.yml  ubuntu-ci-vulkan-from-sdk.yml  ubuntu-ci-vulkan-from-source.yml  ubuntu-ci.yml
cmake/: VRKConfig.cmake.in
engines/basic/: CMakeLists.txt
engines/basic/examples/voxels/: CMakeLists.txt  main.cpp
engines/basic/include/basic/: camera.h  engine.h  light.h  material.h  material_compute.h  material_raster.h  material_ray_trace.h  model.h  render_queue_entry.h  scene.h
engines/basic/include/tinyobjloader/: tiny_obj_loader.h
engines/basic/resources/models/backscatter/: backscatter.mtl
engines/basic/resources/models/color_cube/: color_cube.mtl
engines/basic/resources/models/utah_teapot/: utah_teapot.mtl
engines/basic/src/: camera.cpp  engine.cpp  light.cpp  main.cpp  material.cpp  material_compute.cpp  material_raster.cpp  material_ray_trace.cpp  model.cpp  render_queue_entry.cpp  scene.cpp
engines/basic/src/shaders/: material.comp  material.frag  material.rgen  material.vert  turbidity.frag  turbidity.vert  voxels.frag  voxels.geom  voxels.vert
examples/compute_pipeline/: CMakeLists.txt  main.cpp
examples/compute_pipeline/shaders/: basic.comp  default.comp
examples/dynamic_rendering/: CMakeLists.txt  main.cpp
examples/offline_rendering/: CMakeLists.txt  main.cpp
examples/ray_query/: CMakeLists.txt  main.cpp
examples/ray_query/shaders/: shader.frag
examples/ray_tracing_pipeline/: CMakeLists.txt  main.cpp
examples/ray_tracing_pipeline/shaders/: shader.rchit  shader.rgen  shader.rmiss
examples/texture_sampler/: CMakeLists.txt  main.cpp
examples/texture_sampler/shaders/: shader.frag  shader.vert
examples/xlib_surface/: CMakeLists.txt  main.cpp
examples/xlib_surface/shaders/: shader.frag  shader.vert
include/: engine.h
include/vrk/: attachment.h  buffer.h  command_buffer_group.h  command_pool.h  component.h  compute_pipeline_group.h  descriptor_pool.h  descriptor_set_group.h  descriptor_set_layout.h  device.h  engine.h  fence.h  framebuffer.h  graphics_pipeline_group.h  helper.h  image.h  image_view.h  instance.h  pipeline_layout.h  queue_family.h  render_pass.h  resource.h  sampler.h  semaphore.h  shader_module.h  subpass.h
include/vrk/dynamic_rendering/: dynamic_rendering.h
include/vrk/ray_tracing/: acceleration_structure.h  ray_tracing.h  ray_tracing_pipeline_group.h
include/vrk/wsi/: surface.h  swapchain.h  wsi.h
src/: attachment.cpp  buffer.cpp  command_buffer_group.cpp  command_pool.cpp  component.cpp  compute_pipeline_group.cpp  descriptor_pool.cpp  descriptor_set_group.cpp  descriptor_set_layout.cpp  device.cpp  engine.cpp  fence.cpp  framebuffer.cpp  graphics_pipeline_group.cpp  helper.cpp  image.cpp  image_view.cpp  instance.cpp  main.cpp  pipeline_layout.cpp  queue_family.cpp  render_pass.cpp  resource.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  subpass.cpp
src/dynamic_rendering/: dynamic_rendering.cpp
src/ray_tracing/: acceleration_structure.cpp  ray_tracing.cpp  ray_tracing_pipeline_group.cpp
src/shaders/: default.frag
src/wsi/: surface.cpp  swapchain.cpp  wsi.cpp
tests/: device_test.cpp  instance_test.cpp
tools/: build-examples.sh  clang-format.sh  setup-env.sh  setup-vrk-env.sh
tools/vulkan_development/: .gitignore  vulkan-setup.sh
